# signalflow

./: CMakeLists.txt  README.md  setup.py
auxiliary/libs/signalflow-stubs/: signalflow.pyi
auxiliary/scripts/: auto-generator.py
source/include/signalflow/: signalflow.h
source/include/signalflow/node/ml/Rave/: backend.h  circular_buffer.h  rave.h  utils.h
source/src/: CMakeLists.txt
source/src/node/ml/Rave/: CMakeLists.txt  backend.cpp  rave.cpp  utils.cpp
source/src/python/: nodes.cpp
